Add module for Cell type

--- a/text-table.cabal
+++ b/text-table.cabal
@@ -33,6 +33,7 @@ library
   import:           basics
                   , warnings
   exposed-modules:  Text.Table
+                  , Text.Table.Cell
   hs-source-dirs:   src
 
 test-suite text-table-test
